<resources>
    <string name="app_name">LoginApp</string>

    <string name="email">Email</string>
    <string name="contraseña">Contraseña</string>
    <string name="action_settings">Settings</string>
    <string name="curso">#CursoAndroid</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="btn_registrar">Registrar</string>
    <string name="title_activity_form">form</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="confContraseña">Confirmar Contraseña</string>
    <string name="telefono">Telefono</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home">Home</string>
</resources>
