<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rosa1"
    android:orientation="vertical"
    android:weightSum="1"

    tools:context="com.mayrajaramillo.loginapp.Form">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbarStyle="outsideInset"
        android:layout_weight=".85"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/etNom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/nombre"
                android:inputType="text" />

            <EditText
                android:id="@+id/etApe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/apellido"
                android:inputType="text" />

            <EditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/contraseña"

                android:inputType="textPassword" />

            <EditText
                android:id="@+id/confPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/confContraseña"

                android:inputType="textPassword" />

            <EditText
                android:id="@+id/etTel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/telefono"

                android:inputType="phone" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".15"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnForm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/morado5"
            android:text="@string/btn_registrar"
            android:textColor="@color/blanco"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
