<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mayrajaramillo.loginapp.Home"
    android:orientation="vertical"
    android:background="@color/morado2">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/nombre"
    android:textSize="28sp"
    android:gravity="center"
    android:textStyle="bold"
    />
    <TextView
        android:id="@+id/tvNom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/rosa9"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apellido"
        android:textSize="28sp"
        android:gravity="center"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tvApe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/rosa9"
        android:gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefono"
        android:textSize="28sp"
        android:gravity="center"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tvTel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/rosa9"
        android:gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="28sp"
        android:gravity="center"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/rosa9"/>
</LinearLayout>
